Extract legacy JavaFX client into a separate module